# GraphViz

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
docs/: MANUAL.html  MANUAL.md
include/: Graph.h  GraphAlgorithm.h  GraphParser.h  GraphTypes.h
samples/: euler-circuit.graph  hamilton-multi.graph  nonplanar-k5.graph  planar-cube.graph  shortest-path.graph  showcase.graph
src/: Graph.cpp  GraphAlgorithm.cpp  GraphParser.cpp  main.cpp
src/gui/: ForceLayout.cpp  ForceLayout.h  GraphTextEdit.cpp  GraphTextEdit.h  GraphWidget.cpp  GraphWidget.h  MainWindow.cpp  MainWindow.h  UpdateChecker.cpp  UpdateChecker.h
test_data/: components.graph  euler.graph  parallel.graph  sample.graph  selfloop.graph  shortestpath.graph
